--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
+<meta charset="UTF-8">  
+<title>DECORAÇÃO</title>
 <h1>DECORAÇÃO</h1>
 𝐒𝐎𝐁𝐑𝐄 𝐃𝐄𝐂𝐎𝐑𝐀𝐂̧𝐀̃𝐎
 <p>𝐋𝐨𝐣𝐚 𝐝𝐞 𝐝𝐞𝐜𝐨𝐫𝐚𝐜̧𝐚̃𝐨 𝐥𝐨𝐜𝐚𝐥𝐢𝐳𝐚𝐝𝐚 𝐧𝐚 𝐫𝐮𝐚 𝐝𝐚𝐧𝐭𝐚𝐬 𝟓𝟎𝟓 𝐚 𝐧𝐨𝐬𝐬𝐚 𝐥𝐨𝐣𝐚 𝐯𝐞𝐦 𝐭𝐞 𝐚𝐣𝐮𝐝𝐚𝐫 𝐚 𝐝𝐞𝐜𝐨𝐫𝐚𝐫 𝐬𝐮𝐚 𝐜𝐚𝐬𝐚 𝐨𝐮 𝐬𝐞𝐮 𝐞𝐬𝐩𝐚𝐜̧𝐨 𝐝𝐞 𝐭𝐫𝐚𝐛𝐚𝐥𝐡𝐨 𝐚𝐧𝐨𝐬𝐬𝐚 𝐥𝐨𝐣𝐚 𝐬𝐞𝐠𝐮𝐞 𝐬𝐞𝐧𝐝𝐨 𝐚 𝐧𝟏 𝐝𝐞 𝐯𝐞𝐧𝐝𝐚𝐬 𝐞 𝐜𝐨𝐦 𝐚 𝐦𝐞𝐥𝐡𝐨𝐫 𝐚𝐯𝐚𝐥𝐢𝐚𝐜̧𝐚̃𝐨 𝐝𝐚 𝐜𝐢𝐝𝐚𝐝𝐞</p>
