--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+ <head>
+ </head>   
+ <body>
+ </body>
 <meta charset="UTF-8">  
 <title>DECORAÇÃO</title>
 <h1>DECORAÇÃO</h1>
